* 2008-01-08 - francisco.laguna@open-xchange.com

 - Fix Exception handling in AjaxServlet#service. Wrap everything except ServletException in
   a ServletException (many thanks to Thorben).
 - Fixes for bugs #9109, #10051, #10044, #10052

* 2008-01-07 - francisco.laguna@open-xchange.com

 - Bugfix #9064: Added update task to fix folder name collisions below any parent folder.
 - Bugfix #10403: Log exceptions based on the exceptions category.
 - Bugfix #9695: Allow longer URLs in Infostore.

* 2008-01-03 - francisco.laguna@open-xchange.com

 - Bugfix #10395: Don't recurse for webdav listing if permissions don't allow it.

* 2008-01-02 - francisco.laguna@open-xchange.com

 - Bugfix #9837: Allow forward slashes as part of WebDAV URLs

############### CONFIG CHANGE ##################
#                                              #
#   For this to work, this must be added to    #
#   the apache config:                         #
#                                              #
#   AllowEncodedSlashes On                     #
#                                              #
#   Otherwise the forward slashes are not      #
#   passed to our servlet container.           #
#                                              #
################################################

 - Bugfix #8676 : Requests for LockNullResources are supposed to return
   404 on most requests.
 - Bugfix #9903: Applied patch.
 - Bugfix #9904: Applied patch.

* 2007-12-12 - thorben.betten@open-xchange.com

 - Bugfix #10608: Allowing email addresses with pipe character "|" in
   personal part

* 2007-12-10 - thorben.betten@open-xchange.com

 - Bugfix #10393: MBox support

* 2007-12-07 - marcus.klein@open-xchange.com

 - Bugfix 10559: Checking the defaultSendAddress if a valid value is written.

* 2007-12-05 - thorben.betten@open-xchange.com

 - Bugfix #10503: Sending W3C conform html
 - Bugfix #10526: Text-only drafts are now kept as text-only and got no
   more converted to html
